# PG_BE

./: .gitmodules  Dockerfile  README.md  baza.sh  docker-compose.yaml  launch.sh  odpalaj_to_karol.sh  readme.md
.docker/: ssl.sh
Injector/: Category.cs  Injector.csproj  InjectorSettings.cs  OptionalProductPropertyAttribute.cs  Product.cs  ProductOptionMapping.cs  Program.cs  StringExtensions.cs  Subcategory.cs  injector_settings.json  nlog.config
PrestaShop-1.7.8.x/: README.md
PrestaShop-1.7.8.x/.docker/: docker_run_git.sh
Prestashop/: .gitignore  .htaccess  README.md  docker-compose.yml  robots.txt
Prestashop/.docker/: 000-default.conf  Dockerfile  docker_run_git.sh  ssl.sh
Prestashop/app/config/: parameters.php
Prestashop/mails/pl/: order_conf.html
Prestashop/modules/ps_banner/: .gitignore
ScrappedData/: heatmap_small.txt  scrapped_large.txt  scrapped_small.txt
ScrappedData/dataset_large/: heatmap.txt  scrapped.txt
ScrappedData/dataset_small/: categories.txt  heatmap.txt  scrapped.txt
Scrapper/: .gitignore  Cargo.toml
Scrapper/example_html/: product_page.html
Scrapper/src/: image_processing.rs  listing_site_processing.rs  main.rs  product_site_processing.rs  shop_product.rs
Scrapper/src/logging/: log_manager.rs
Scripts/: create_dump.sh  database_update.sh  dump.sql  install-chromedriver.sh  load_dump.sh  set_images.sh  update_themes.sh
Tests/: .gitignore  README.md
Tests/selenium/: chromedriver_provider.py  presta_runner.py  selenium-tests.py
dump/: dump.sql  set_images.sh
tests/selenium/: presta_runner.py  selenium-tests.py
(+96 files in other folders)
