[package]
name = "web-scrapper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.17.1"
log = "0.4"
flexi_logger = "0.27"
tokio = { version = "1.32.0", features = ["full"] }
once_cell = "1.18.0"
regex = "1.9"
serde_json = "1.0"